src/objects/OrgChartPlus__MSO_OrgChart2TeamMember__c.object
<CustomObject>
    <description>Global selling team info</description>
    <fields>
        <fullName>OrgChartPlus__ChartPosX__c</fullName>
        <label>ChartPosX</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ChartPosY__c</fullName>
        <label>ChartPosY</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>OrgChartPlus__SM_Competitor__c</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__DisplayOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DisplayOrder</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__MoleculePosX__c</fullName>
        <label>MoleculePosX</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__MoleculePosY__c</fullName>
        <label>MoleculePosY</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Name__c</fullName>
        <formula>IF ( ISNULL( OrgChartPlus__User__c )=false, OrgChartPlus__User__r.FirstName + &apos; &apos; + OrgChartPlus__User__r.LastName, 
IF ( ISNULL( OrgChartPlus__Contact__c )=false, OrgChartPlus__Contact__r.FirstName + &apos; &apos; + OrgChartPlus__Contact__r.LastName, 
IF ( ISNULL( OrgChartPlus__Competitor__c )=false, OrgChartPlus__Competitor__r.Name, 
IF ( ISNULL( OrgChartPlus__NonSFDCPerson__c )=false, OrgChartPlus__NonSFDCPerson__r.Name, 
null ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__NonSFDCPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-SFDC Person</label>
        <referenceTo>OrgChartPlus__SM_NonSFUser__c</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__OrgChart__c</fullName>
        <label>OrgChart</label>
        <referenceTo>OrgChartPlus__MSO_OrgChart2__c</referenceTo>
        <relationshipLabel>MSO OrgChart TeamMembers</relationshipLabel>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ShowFlags__c</fullName>
        <label>ShowFlags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSO_OrgChart_TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MSO OrgChart TeamMember</label>
    <nameField>
        <displayFormat>MOT-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSO OrgChart TeamMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>